<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.michael.p12.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="Formulario Registro"
            android:gravity="center_horizontal"
            android:textSize="25sp"
            android:textColor="@color/colorAccent"
            android:textStyle="bold"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/usuario"
                android:textSize="20sp"
                android:textColor="@color/black"
                />
            <EditText
                android:id="@+id/eUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/usuario"

                />



        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/password"
                android:textColor="@color/black"
                android:textSize="20sp"
                />
            <EditText
                android:id="@+id/ePassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                android:inputType="textPassword"

                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/rpassword"
                android:textSize="20sp"
                android:textColor="@color/black"

                />
            <EditText
                android:id="@+id/eRpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/rpassword"
                android:inputType="textPassword"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/mail"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <EditText
                android:id="@+id/eMail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mail"
                android:inputType="textEmailAddress"
                />

        </LinearLayout>

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/rMasculino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="true"
                android:text="@string/masculino"

                />

            <RadioButton
                android:id="@+id/rFemenino"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/femenino" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_date"
                android:onClick="showDatePickerDialog"
                android:textSize="20sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/eDate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/pick_date"
                android:gravity="center_horizontal"
                android:textColor="@color/black"
                android:textSize="15sp"

                />

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/ciudad"
                android:textColor="@color/black"
                android:textSize="20sp" />

            <Spinner
                android:id="@+id/sCiudades"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"


                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/gaming"
                android:id="@+id/cGaming"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dormir"
                android:id="@+id/cDormir"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/comer"
                android:id="@+id/cComer"/>
            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/leer"
                android:id="@+id/cLeer"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/bAceptar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/orangered"
                android:onClick="Aceptar"
                android:text="@string/aceptar"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="30sp" />
        </LinearLayout>

        <TextView
            android:id="@+id/tInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/informacion"
            android:textColor="@color/orangered"
            android:textSize="20sp" />

    






























    </LinearLayout>



</ScrollView>
